# michi

./: .gitignore  CMakeLists.txt  flake.nix
lib/: crc.h  ekf.hpp  ekf2.hpp  ekf3.hpp  gazebo_interface.cpp  gazebo_interface.hpp  mother_interface.hpp  realsense_generator.hpp  yolov8.hpp  yolov8_arrow.hpp
tests/: test_gazebo_interface.cpp  test_mother_interface.cpp  test_yolov8_arrow.cpp
